# DinoDent

./: .gitignore  CMakeLists.txt  DATATEST - Copy.db  DATATEST.db  DATATEST1.db  DATATEST2.db  DinoDent.pro  DinoDent.sln  DinoDent.vcxproj  DinoDent.vcxproj.filters  INSTALL.md  INVOICE_2219112648_16_20220228_0001871392.xml  INVOICE_2219112648_16_20220930_0002383887.xml  LICENSE  README.md  Resource.rc  STOM_2219112648_220008771_64_202110_01.xml  STOM_2219112648_220008771_64_202201_01.xml  STOM_2219112648_220008771_64_202304_01.xml  Torque.pro  Torque.sln  TorqueDB.db  TorqueMVP.vcxproj  TorqueMVP.vcxproj.filters  cities.txt  december DATATEST.db  manipulation.json  manipulation.json.bak  msg  munciMap.txt  nzok.json  regionMap.txt  sortedCities.txt  test.xml  ver  version
data/: Naseleno_miasto.xls  Oblast.xls  Obshtina.xls  cities.json  cities.json.bak  cities2.json  defaultPriceList.json.bak  ksmp.json.bak  nzok.json  nzok.json.bak  recipients.json  recipients.json.bak
dependencies/lib/: QtZint.lib  QtZintd.lib  libexslt.lib  libexslt_a.lib  libp11.lib  libxmlsec-openssl.lib  libxmlsec-openssl_a.lib  libxmlsec.lib  libxmlsec_a.lib  libxslt.lib  libxslt_a.lib  limereport.lib  limereportd.lib  pkcs11.lib
include/LimeReport/: lrglobal.h
include/libexslt/: exsltconfig.h
include/libxml/: xmlversion.h
include/libxslt/: xsltconfig.h
include/sqLite3/: shell.c  sqlite3.h
include/xmlsec/: crypto.h  transforms.h  version.h  xmlsec.h
installer/: DinoDent.icns  DinoDent.rtf  DinoScript.iss  Info.plist
installer/macos/: DinoScript.sh  icon.icns
installer/win/: DinoDent.rtf  DinoScript.iss
reports/: amb.lrxml
resources/: Resource.qrc  dateEditStyle.qss  dbSchema.txt  db_migrateTo10.txt  db_migrateTo11.txt  db_migrateTo12.txt  db_migrateTo13.txt  db_migrateTo14.txt  db_migrateTo15.txt  db_migrateTo16.txt  db_migrateTo17.txt  db_migrateTo20.txt  db_migrateTo21.txt  db_migrateTo22.txt  db_migrateTo23.txt  db_migrateTo24.txt  db_migrateTo25.txt  db_migrateTo26.txt  db_migrateTo27.txt  db_migrateTo28.txt  db_migrateTo29.txt  db_migrateTo30.txt  db_migrateTo31.txt  db_migrateTo32.txt  db_migrateTo33.txt  db_migrateTo34.txt  db_migrateTo35.txt  db_migrateTo37.txt  db_migrateTo38.txt  db_migrateTo39.txt  db_migrateTo7.txt  db_migrateTo8.txt  db_migrateTo9.txt  eIDAS.txt  json_cities.json  json_country.json  json_defaultPriceList.json  json_diagnosis.json  json_diagnosisText.json  json_dose.json  (+35 more)
src/: GlobalConst.h  GlobalSettings.cpp  GlobalSettings.h  Path.cpp  Path.h  QtVersion.h  Resources.cpp  Resources.h  TestToothDialog.h  Version.h  bridgeTest.h  main.cpp
src/Database/: AbstractORM.h  Database.cpp  Database.h  DbAllergy.cpp  DbAllergy.h  DbAmbList.cpp  DbAmbList.h  DbBackend.h  DbBrowser.cpp  DbBrowser.h  DbDoctor.cpp  DbDoctor.h  DbFiscalReceipt.cpp  DbFiscalReceipt.h  DbInvoice.cpp  DbInvoice.h  DbListOpener.cpp  DbListOpener.h  DbLogin.cpp  DbLogin.h  DbManipulation.cpp  DbManipulation.h  DbMedicalNotice.cpp  DbMedicalNotice.h  DbNotes.cpp  DbNotes.h  DbNotification.cpp  DbNotification.h  DbPatient.cpp  DbPatient.h  DbPatientSummary.cpp  DbPatientSummary.h  DbPerio.cpp  DbPerio.h  DbPractice.cpp  DbPractice.h  DbPrescription.cpp  DbPrescription.h  DbProcedure.cpp  DbProcedure.h  (+18 more)
src/DbUpdates/: DbUpdates.cpp  DbUpdates.h  Update10.cpp  Update11.cpp  Update12.cpp  Update12_15.cpp  Update12_16.cpp  Update12_17.cpp  Update12_18.cpp  Update12and13.cpp  Update14.cpp  Update19.cpp  Update20.cpp  Update20_21.cpp  Update5.cpp  Update6.cpp  Update7.cpp  Update8.cpp  Update9.cpp  Updater.cpp  Updater.h
src/JsonCpp/: json.h
src/Model/: Allergy.cpp  Allergy.h  AmbList.h  AmbListRow.h  AmbListValidator.cpp  AmbListValidator.h  AmbListXML.h  CalendarStructs.cpp  CalendarStructs.h  CheckState.cpp  CheckState.h  CityCode.cpp  CityCode.h  Country.cpp  Country.h  Date.cpp  Date.h  DbAmbList.cpp  DbAmbList.h  DbPatient.cpp  DbPatient.h  DirTree.cpp  DirTree.h  DynamicNum.h  Ekatte.cpp  Ekatte.h  ExampleFeatureClass.h  Foreigner.h  FreeFunctions.cpp  FreeFunctions.h  GlobalSettingsData.h  Hospitalization.h  HotfixExample.h  ICD10.cpp  ICD10.h  Identifier.cpp  Identifier.h  InsuranceStatus.cpp  InsuranceStatus.h  KSMP.cpp  (+41 more)
src/Network/: AbstractReplyHandler.cpp  AbstractReplyHandler.h  Base64Convert.cpp  Base64Convert.h  BulkRequester.cpp  BulkRequester.h  DynamicNumenclatures.h  GetHSM.cpp  GetHSM.h  HISServ.h  Network.cpp  Network.h  NetworkManager.cpp  NetworkManager.h  PISServ.cpp  PISServ.h  PKCS11.cpp  PKCS11.h  PatientSigner.cpp  PatientSigner.h  ReplyHandler.h  Telemetry.cpp  Telemetry.h  XmlSigner.cpp  XmlSigner.h  crypto.cpp  crypto.h  signer.cpp  signer.h
src/Presenter/: AbstractSubPresenter.cpp  AbstractSubPresenter.h  AddPracticePresenter.cpp  AddPracticePresenter.h  AllergiesDialogPresenter.h  AmbListPagePresenter.cpp  AmbListPagePresenter.h  BridgeHelper.cpp  BridgeHelper.h  BrowserPresenter.cpp  BrowserPresenter.h  ButtonSurfaceMatrix.cpp  ButtonSurfaceMatrix.h  CalendarPresenter.cpp  CalendarPresenter.h  CheckModel.cpp  CheckModel.h  CheckState.cpp  CheckState.h  CrownPresenter.cpp  CrownPresenter.h  DetailedStatusPresenter.cpp  DetailedStatusPresenter.h  DoctorDialogPresenter.cpp  DoctorDialogPresenter.h  DosagePresenter.cpp  DosagePresenter.h  EditorPresenter.cpp  EditorPresenter.h  EndoPresenter.cpp  EndoPresenter.h  ExtractionPresenter.cpp  FiberSplintPresenter.cpp  FiberSplintPresenter.h  FinancialPresenter.cpp  FinancialPresenter.h  FiscalReceiptPresenter.cpp  FiscalReceiptPresenter.h  FiscalReportPresenter.cpp  FiscalReportPresenter.h  (+91 more)
src/Printer/: FilePaths.cpp  FilePaths.h  Print.cpp  Print.h  PrintAmb.cpp  PrintConsent.cpp  PrintDentureDeclaration.cpp  PrintGDPR.cpp  PrintHIRBNoDeclaration.cpp  PrintInvoice.cpp  PrintPrescription.cpp  PrintPrv.h  SignatureTablet.cpp  SignatureTablet.h
src/Tests/: CrudTest.cpp  CrudTest.h
src/Updates/: DbUpdates.cpp  DbUpdates.h  Updater.cpp
src/View/: CommonIcon.cpp  CommonIcon.h  ErrorMessage.cpp  ErrorMessage.h  Theme.h  (+12 more)
toothimage/: ANTERIOR TEMP.psd  POSTERIOR TEMP.psd  Untitled-1.psd  common.psd  masks.psd
(+1529 files in other folders)
